--- a/BlogPublishTool/BlogPublishTool.csproj
+++ b/BlogPublishTool/BlogPublishTool.csproj
@@ -60,6 +60,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BlogHandler.cs" />
+    <Compile Include="MdHandler.cs" />
     <Compile Include="Options.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
